[gd_scene load_steps=3 format=3 uid="uid://cceu77cxmffox"]

[ext_resource type="Script" uid="uid://d1o57rbubedks" path="res://Assets/Scenes/options_menu.gd" id="1_g88qp"]
[ext_resource type="Texture2D" uid="uid://dv0tu0q764flb" path="res://Assets/Images/sword.png" id="3_lpqgh"]

[node name="Options_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g88qp")

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color(0.467673, 0.94076645, 0.90344894, 1)
show_behind_parent = true
layout_mode = 0
offset_left = 63.0
offset_top = 49.0
offset_right = 467.0
offset_bottom = 334.0
texture = ExtResource("3_lpqgh")

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
layout_mode = 0
offset_left = 175.0
offset_top = 53.0
offset_right = 575.0
offset_bottom = 334.0
texture = ExtResource("3_lpqgh")
flip_h = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -48

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 60
text = "Options Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KeyBindings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 40
text = "Key Bindings"

[node name="AudioSettings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 39
text = "Audio 	Settings"

[node name="Back_Button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 31
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/KeyBindings" to="." method="_on_key_bindings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AudioSettings" to="." method="_on_audio_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back_Button" to="." method="_on_exit_button_pressed"]
